[tool.poetry]
name = "cli"
version = "0.1.0"
description = "A small cli to demonstrate async python code."
authors = ["Owais Jamil"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^13.9.4"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
